// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Avatar Avatar 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c1 {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  background: rgb(244,244,250);
  color: #98989E;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 20px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div
    class="c0"
    data-testid="avatar"
  >
    <div
      class="c1"
      data-testid="avatar-initials"
      size="40"
    >
      C
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Badge Badge 1`] = `
.c1 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 10px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: center;
  line-height: 10px;
}

.c0 {
  border: 1px solid #F2F2F9;
  color: #F2F2F9;
  border-radius: 20px;
  padding: 0px 10px;
  box-sizing: border-box;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: lowercase;
}

.c0 *:first-letter {
  text-transform: uppercase;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div
    class="c0"
  >
    <span
      class="c1"
      color="light"
      data-testid="badge-text"
      font-size="10px"
      font-style="normal"
      role=""
    >
      text
    </span>
  </div>
</div>
`;

exports[`Storyshots Components/Button/Default Default 1`] = `
.c0 {
  position: relative;
  background-color: #5C37CC;
  border: none;
  border-radius: 4px;
  color: #FFF;
  font-size: 10px;
  height: 40px;
  line-height: 40px;
  font-weight: bold;
  padding: 0 33px;
  cursor: pointer;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:hover {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <button
    class="c0"
    data-testid="button-default-undefined"
    type="button"
  >
    text
  </button>
</div>
`;

exports[`Storyshots Components/Button/Rounded Rounded 1`] = `
.c1 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 12px;
  font-weight: bold;
  color: #98989E;
  text-align: left;
  line-height: 12px;
}

.c0 {
  border: none;
  background: rgb(44,44,46);
  height: 50px;
  border-radius: 30px;
  height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px 33px;
  cursor: pointer;
  -webkit-transition: 0.2s;
  transition: 0.2s;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c0:hover {
  -webkit-transform: scale(1.03);
  -ms-transform: scale(1.03);
  transform: scale(1.03);
}

.c0 > * + * {
  margin-left: 10px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <button
    class="c0"
    data-testid="button-iconRounded-undefined"
    type="button"
  >
    <span
      class="c1"
      color="dark"
      font-size="12px"
      font-style="normal"
      role=""
    >
      text
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Cards/Base Base 1`] = `
.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  background-color: gray;
}

.c0 > * + * {
  margin-top: 10px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div
    class="c0"
    color="gray"
  >
    ...
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Body Body 1`] = `
.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  background-color: gray;
}

.c0 > * + * {
  margin-top: 10px;
}

.c1 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div
    class="c0"
    color="gray"
  >
    <div
      class="c1"
    >
      body
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Config Config 1`] = `
.c7 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 14px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 14px;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgb(244,244,250);
  width: 15px;
  height: 15px;
}

.c4 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 svg {
  width: 15px;
  height: 15px;
}

.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
}

.c0 > * + * {
  margin-top: 10px;
}

.c5 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

.c2 {
  padding: 0px 17px;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > * + * {
  margin-left: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: #5C37CC;
}

.c6 > :not(:first-child) {
  margin-top: 10px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <i
          class="c4"
          color="light"
          data-testid="icon-workspace"
        >
          <div>
            <div>
              <svg
                src="workspace"
              />
            </div>
          </div>
        </i>
      </div>
    </div>
    <div
      class="c5 c6"
    >
      <span
        class="c7"
        color="light"
        font-size="14px"
        font-style="normal"
        role=""
      />
      ...
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Expand Expand 1`] = `
.c7 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 14px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 14px;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgb(244,244,250);
  width: 15px;
  height: 15px;
}

.c4 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 svg {
  width: 15px;
  height: 15px;
}

.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
}

.c0 > * + * {
  margin-top: 10px;
}

.c5 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

.c8 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
  cursor: pointer;
}

.c2 {
  padding: 0px 17px;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > * + * {
  margin-left: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: #5C37CC;
}

.c6 > :not(:first-child) {
  margin-top: 10px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <i
          class="c4"
          color="light"
          data-testid="icon-undefined"
        />
      </div>
    </div>
    <div
      class="c5 c6"
    >
      <span
        class="c7"
        color="light"
        font-size="14px"
        font-style="normal"
        role=""
      />
      <div
        class="c8"
      >
        click here
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Header Header 1`] = `
.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  background-color: gray;
}

.c0 > * + * {
  margin-top: 10px;
}

.c1 {
  padding: 0px 17px;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1 > * + * {
  margin-left: 10px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div
    class="c0"
    color="gray"
  >
    <div
      class="c1"
    >
      header
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Main Main 1`] = `
.c3 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 12px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 12px;
}

.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  background-color: dark;
}

.c0 > * + * {
  margin-top: 10px;
}

.c2 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

.c5 {
  width: 100%;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  margin-top: 10px;
}

.c5:only-child {
  margin-top: 0;
}

.c6 {
  margin-top: 10px;
}

.c1 {
  background-color: rgb(44,44,46);
}

.c1:hover .sc-iemWCZ,
.c1:hover .c4 {
  white-space: normal;
  overflow: auto;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div
    class="c0 c1"
    color="dark"
    data-testid="card-main"
  >
    <div
      class="c2"
    >
      <span
        class="c3 c4 c5"
        color="light"
        font-size="12px"
        font-style="normal"
        role=""
      />
      <div
        class="c6"
      >
        ...
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Cards/Release Release 1`] = `
.c6 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 10px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: center;
  line-height: 10px;
}

.c9 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 14px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 14px;
}

.c5 {
  border: 1px solid #F2F2F9;
  color: #F2F2F9;
  border-radius: 20px;
  padding: 0px 10px;
  box-sizing: border-box;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-transform: lowercase;
}

.c5 *:first-letter {
  text-transform: uppercase;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgb(244,244,250);
  width: 15px;
  height: 15px;
}

.c4 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 svg {
  width: 15px;
  height: 15px;
}

.c0 {
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 10px 0px;
  width: 269px;
  cursor: pointer;
}

.c0:hover {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  -webkit-transform: scale(1.03);
  -ms-transform: scale(1.03);
  transform: scale(1.03);
}

.c0 > * + * {
  margin-top: 10px;
}

.c7 {
  margin-left: 17px;
  margin-right: 17px;
  word-wrap: break-word;
}

.c2 {
  padding: 0px 17px;
  height: 15px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c2 > * + * {
  margin-left: 10px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: #10AA80;
}

.c1:hover .{
  white-space: normal;
  overflow: visible;
}

.c8 .{
  width: 235px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <i
          class="c4"
          color="light"
          data-testid="icon-info"
        >
          <div>
            <div>
              <svg
                src="info"
              />
            </div>
          </div>
        </i>
      </div>
      <div
        class="c5"
      >
        <span
          class="c6"
          color="light"
          data-testid="badge-Deployed"
          font-size="10px"
          font-style="normal"
          role=""
        >
          Deployed
        </span>
      </div>
    </div>
    <div
      class="c7 c8"
    >
      <span
        class="c9 "
        color="light"
        data-testid="release-card-description"
        font-size="14px"
        font-style="normal"
        role=""
      >
        ...
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Chart Chart 1`] = `
.c0 {
  padding-right: 15px;
}

.c0 .apexcharts-canvas,
.c0 .apexcharts-canvas.apexcharts-theme-dark {
  background-color: transparent;
}

.c0 .apexcharts-xaxis-tick {
  display: none;
}

.c0 .apexcharts-yaxistooltip {
  display: none;
}

.c0 .apexcharts-xaxistooltip {
  display: none;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div
    class="c0"
    data-testid="apexcharts-mock"
    height="200"
    options="[object Object]"
    series="[object Object]"
    type="area"
    width="500"
  >
    <div>
      <svg>
        <g
          class="apexcharts-yaxis"
        >
          <g>
            <text
              class="apexcharts-yaxis-label"
            />
            <text
              class="apexcharts-yaxis-label"
            />
            <text
              class="apexcharts-yaxis-label"
            />
            <text
              class="apexcharts-yaxis-label"
            />
            <text
              class="apexcharts-yaxis-label"
            />
            <text
              class="apexcharts-yaxis-label"
            />
            <text
              class="apexcharts-yaxis-label"
            />
            <text
              class="apexcharts-yaxis-label"
            />
            <text
              class="apexcharts-yaxis-label"
            />
            <text
              class="apexcharts-yaxis-label"
            />
            <text
              class="apexcharts-yaxis-label"
            />
            <text
              class="apexcharts-yaxis-label"
            />
          </g>
        </g>
        <g
          class="apexcharts-xaxis"
        >
          <g>
            <text
              class="apexcharts-xaxis-label"
            />
            <text
              class="apexcharts-xaxis-label"
            />
            <text
              class="apexcharts-xaxis-label"
            />
            <text
              class="apexcharts-xaxis-label"
            />
            <text
              class="apexcharts-xaxis-label"
            />
            <text
              class="apexcharts-xaxis-label"
            />
            <text
              class="apexcharts-xaxis-label"
            />
            <text
              class="apexcharts-xaxis-label"
            />
            <text
              class="apexcharts-xaxis-label"
            />
            <text
              class="apexcharts-xaxis-label"
            />
            <text
              class="apexcharts-xaxis-label"
            />
            <text
              class="apexcharts-xaxis-label"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Editor Editor 1`] = `
.c0 {
  position: relative;
  width: 400px;
  height: 200px;
  margin-top: 20px;
  border-radius: 4px;
  color: #C7C7D4;
  background-color: rgb(44,44,46);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2:first-child {
  margin-top: 10px;
}

.c2 .property {
  color: #30D158;
}

.c2 .operator {
  color: #FFF;
}

.c2 .punctuation {
  color: rgb(244,244,250);
}

.c2 .string {
  color: #C7C7D4;
}

.c3 {
  min-width: 35px;
  width: 35px;
  text-align: right;
  color: #C7C7D4;
  border-right: 1px solid #3A3A3C;
  margin: 0 5px 0 0;
  padding: 0 10px 0 0;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  width: calc(100% - 54px);
  height: calc(100% - 20px);
  background: none;
  color: transparent;
  caret-color: #C7C7D4;
  border: none;
  resize: none;
  outline: none;
  margin: 10px 0;
  white-space: pre-wrap;
  word-break: keep-all;
  overflow-wrap: break-word;
}

.c1 {
  height: calc(100% - 10px);
  margin-bottom: 0;
  white-space: pre-wrap;
  word-break: keep-all;
  overflow-wrap: break-word;
  overflow: auto;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div
    class="c0"
    data-testid="editor"
    height="200px"
    width="400px"
  >
    <pre
      class="c1 prism-code language-json"
    >
      <div
        class="c2 token-line"
        data-testid="line-0"
        style="color: rgb(154, 134, 253);"
      >
        <span
          class="c3"
        >
          1
        </span>
        <span
          data-testid="line-text-0"
        >
          <span
            class="token plain"
          >
            

          </span>
        </span>
      </div>
    </pre>
    <textarea
      class="c4"
      data-testid="input-text-undefined"
      spellcheck="false"
    />
  </div>
</div>
`;

exports[`Storyshots Components/Switch Switch 1`] = `
.c5 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 14px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 14px;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 24px;
  height: 15px;
  background-color: #C7C7D4;
  border-radius: 23px;
  vertical-align: text-bottom;
  -webkit-transition: all 0.3s linear;
  transition: all 0.3s linear;
}

.c4::before {
  content: '';
  position: absolute;
  left: 0;
  width: 20px;
  height: 11px;
  background-color: rgb(44,44,46);
  border-radius: 11px;
  -webkit-transform: translate3d(2px,2px,0) scale3d(1,1,1);
  -ms-transform: translate3d(2px,2px,0) scale3d(1,1,1);
  transform: translate3d(2px,2px,0) scale3d(1,1,1);
  -webkit-transition: all 0.25s linear;
  transition: all 0.25s linear;
}

.c4::after {
  content: '';
  position: absolute;
  left: 1px;
  top: 1px;
  width: 9px;
  height: 9px;
  background-color: #C7C7D4;
  border-radius: 11px;
  box-shadow: 0 2px 2px rgba(0,0,0,0.2);
  -webkit-transform: translate3d(2px,2px,0);
  -ms-transform: translate3d(2px,2px,0);
  transform: translate3d(2px,2px,0);
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
}

.c2 {
  display: none;
}

.c2:checked + .c3 {
  background-color: #5C37CC;
}

.c2:checked + .c3::before {
  -webkit-transform: translate3d(10px,2px,0) scale3d(0,0,0);
  -ms-transform: translate3d(10px,2px,0) scale3d(0,0,0);
  transform: translate3d(10px,2px,0) scale3d(0,0,0);
}

.c2:checked + .c3::after {
  -webkit-transform: translate3d(12px,2px,0);
  -ms-transform: translate3d(12px,2px,0);
  transform: translate3d(12px,2px,0);
}

.c0 {
  display: inline-block;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > :last-child {
  margin-left: 5px;
}

.c0:active .c1:checked + .c3::after {
  -webkit-transform: translate3d(2px,2px,0);
  -ms-transform: translate3d(2px,2px,0);
  transform: translate3d(2px,2px,0);
}

.c0:active .c3::after {
  width: 10px;
  -webkit-transform: translate3d(2px,2px,0);
  -ms-transform: translate3d(2px,2px,0);
  transform: translate3d(2px,2px,0);
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <label
    class="c0"
  >
    <input
      class="c1 c2"
      data-testid="switch-undefined"
      type="checkbox"
    />
    <i
      class="c3 c4"
    />
    <span
      class="c5"
      color="light"
      font-size="14px"
      font-style="normal"
      role=""
    >
      Global
    </span>
  </label>
</div>
`;

exports[`Storyshots Components/Tab Panel Tab Panel 1`] = `
.c5 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-size: 12px;
  font-weight: normal;
  color: rgb(244,244,250);
  text-align: left;
  line-height: 12px;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgb(244,244,250);
}

.c4 > div > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  height: 41px;
  background-color: rgb(44,44,46);
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 660px;
  box-sizing: border-box;
  border-right: 1px solid rgb(44,44,46);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-top: 10px;
  padding-right: 32px;
  padding-left: 32px;
  overflow: auto;
  height: calc(100vh - 90px);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 > * + * {
  margin-left: 8px;
}

.c6 {
  width: 150px;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c2 {
  color: #F2F2F9;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 233px;
  height: 41px;
  box-sizing: border-box;
  padding-left: 31px;
  background-color: #3A3A3C;
}

.c2 > * + * {
  margin-left: auto;
  margin-right: 12px;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <div
    class="c0"
    data-testid="tabpanel-Untitled"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <i
            class="c4"
            color="light"
            data-testid="icon-undefined"
          />
          <span
            class="c5 c6"
            color="light"
            font-size="12px"
            font-style="normal"
            role=""
          >
            Untitled
          </span>
        </div>
      </div>
    </div>
    <div
      class="c7 tabpanel-content"
    >
      Tab
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Text Text 1`] = `
.c0 {
  -webkit-animation: 0.3s iHfShZ linear;
  animation: 0.3s iHfShZ linear;
  display: block;
  font-style: normal;
  font-weight: normal;
  color: #0A84FF;
  text-align: left;
}

<div
  style="display: flex; align-items: center; justify-content: center;"
>
  <span
    class="c0"
    color="primary"
    font-style="normal"
    role=""
  >
    Text
  </span>
</div>
`;
